# repomap

./: .flake8  .gitignore  CHANGELOG.md  README.md  project_structure.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  coverage.yml  publish.yml
repomap/: cli.py  core.py
repomap/formatters/: ascii.py  html.py  json.py  markdown.py
tests/: __init__.py  test_cli.py  test_core.py  test_formatters.py
