[tool.poetry]
name = "repomap"
version = "0.1.0"
description = "A tool for generating repository structure documentation"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "repomap"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
click = "^8.1.7"
pyyaml = "^6.0.1"
rich = "^13.7.0"
colorama = {version = "^0.4.6", platform = "win32"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
repomap = "repomap.cli:main"
